# Code-Review-Framework-Combining-Large-Language-Models-and-Chain-of-Thought-Reasoning

./: .codacy.yaml  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-hooks.yaml  .prospector.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Human_Judge.md  README.md  SECURITY.md  architecture.md  conda_requirements.txt  dev_requirements.txt  latexmkrc  mermaid_config.json  mermaid_to_png.py  pyproject.toml  requirements.txt
.claude/agents/: architecture-diagram-author.md  paper-author.md
.github/: dependabot.yml
.github/workflows/: ci.yml  kg-refresh.yml  prthinker.yml  (+2 more)
.prthinker/: repo-kg.html  repo-kg.sqlite
READMEs/: CLAUDE.md  Human_Judge.md  README.zh-CN.md  README.zh-TW.md  architecture.md  features.md  features.zh-CN.md  features.zh-TW.md  local_gemma_deployment.md  setup.md  setup.zh-CN.md  setup.zh-TW.md
benchmarks/: LONGITUDINAL_STUDY.md  README.md
docker/: .env.example  Dockerfile.server  Dockerfile.server-gemma4  Dockerfile.server-qwen3-coder  Dockerfile.train  docker-compose.ablation-base.yml  docker-compose.monitoring.yml  docker-compose.server-gemma4.yml  docker-compose.server-qwen3-coder.yml  docker-compose.tls.yml  docker-compose.train.yml  docker-compose.yml  entrypoint-nginx.sh  nginx.conf  rebuild-server.sh
docs/: Makefile  conda-faiss-server-install.md  conf.py  index.rst  requirements.txt
examples/: README.md  multi-model-review.sh  prthinker.downstream.yml
export/: prthinker-features-full-zh-tw.pptx
fine-tuning-data/: llama3-fine-tuning-data.md  qwen3-fine-tuning-jsonl.jsonl.py  qwen3-fine-tuning-template.md
output/: cot_code_review_detailed_flow.txt  knowledge_distillation_training_flow.txt  results_summary.txt  system_overview.txt  table1_crscore_overall.md  table2_prompt_design_llm_judge.md  table3_prompt_design_human_judge.md
paper/: AGENT_HANDOFF.md  CHANGES_v3.9.md  REVIEWER_CHECKLIST_冠穎_v3.9.md  REWRITE_BRIEF.md  REWRITE_OUTLINE.md  TCSE_v1.6.docx  TCSE_v1.8.docx  TCSE_v2.10.docx  TCSE_v2.11.docx  TCSE_v2.12.docx  TCSE_v2.13.docx  TCSE_v2.14.docx  TCSE_v2.3.docx  TCSE_v2.4.docx  TCSE_v2.5.docx  TCSE_v2.6.docx  TCSE_v2.7.docx  TCSE_v2.8.docx  TCSE_v2.9.docx  THESIS_AUTHORING_GENERAL_LESSONS.md  THESIS_EXPERIMENT_LESSONS.md  _add_acknowledgments.py  _apply_paper.py  _apply_tcse.py  _build_research_data_manifest.py  _check_rules.py  _dump_TCSE_v2.10.txt  _dump_TCSE_v2.11.txt  _dump_TCSE_v2.12.txt  _dump_TCSE_v2.13.txt  _dump_TCSE_v2.14.txt  _dump_TCSE_v2.5.txt  _dump_TCSE_v2.6.txt  _dump_TCSE_v2.7.txt  _dump_TCSE_v2.8.txt  _dump_TCSE_v2.9.txt  _dump_docx.py  _dump_full.py  _dump_tables.py  _dump_論文_v1.9.txt  (+59 more)
prthinker/: __init__.py  __main__.py  ablation.py  accepted.py  adversarial.py  adversarial_eval.py  api_consistency.py  api_surface.py  arbitration.py  auto_fix.py  batch_review.py  benchmark.py  benchmark_cli.py  benchmark_datasets.py  benchmark_scoring.py  bidi_guard.py  binary_changes.py  calibration.py  change_map.py  change_stats.py  checks.py  ci_signals.py  citation_verify.py  cli.py  cli_commands.py  cli_commands_helpers.py  cli_io.py  cli_parser.py  cli_parser_groups.py  cli_parser_provider_groups.py  cli_review.py  cli_review_autofix.py  cli_review_emit.py  cli_review_helpers.py  cli_review_issues.py  cli_review_overall_summary.py  cli_triage.py  codequality.py  commit_review.py  confidence.py  (+120 more)
requirements/: README.md  ci.in  runner.in
reviewmind/: __init__.py  __main__.py  accepted.py  adversarial.py  adversarial_eval.py  api_consistency.py  auto_fix.py  cache.py  checks.py  ci_signals.py  cli.py  config.py  counterfactual.py  dep_upgrade.py  dialogue.py  diff_entropy.py  dismissed.py  findings.py  formatters.py  github_api.py  harvest.py  judge.py  mcp_server.py  personas.py  pipeline.py  pr_classifier.py  pricing.py  rag.py  repo_config.py  report.py  reproducibility.py  review_cache.py  risk_score.py  sandbox.py  schemas.py  self_review.py  steps.py  telemetry.py
scores/: README.md  _cleanup_worktrees.txt  aggregate_irrelevant_quality.py  aggregate_objective.py  cases.jsonl  cases_full.jsonl  codex_groundtruth.py  codex_judge.py  codex_judge_rag.py  contextbench_api_response.json  contextbench_improved_baseline.jsonl  contextbench_improved_baseline_score.json  contextbench_local_scorer.py  contextbench_official_lexical_baseline.jsonl  contextbench_official_lexical_baseline_results.jsonl  contextbench_official_patch_file_oracle.jsonl  contextbench_official_patch_file_oracle_results.jsonl  contextbench_official_patch_file_oracle_results_rerun.jsonl  contextbench_protocol_audit.json  contextbench_rerank.jsonl  contextbench_rerank_graph.jsonl  contextbench_valid_baseline_summary.json  contextbench_verified_25.jsonl  execution_report.json  extract_full_cases.py  framework_retriever_summary.json  gemma_experiment_driver.py  measure_block_rerank.py  measure_iterative.py  measure_patch_localization.py  measure_rerank.py  measure_rerank_graph.py  objective_issue_judge.py  outcomes_block_rerank.jsonl  outcomes_block_rerank_uncapped.jsonl  outcomes_framework_rerank.jsonl  outcomes_framework_retriever.jsonl  outcomes_full.jsonl  outcomes_full.jsonl.bak  outcomes_iterative.jsonl  (+17 more)
tests/: conftest.py  test_adversarial.py  test_adversarial_eval.py  test_agent_cli.py  test_aggregate_preserves_prior.py  test_anthropic.py  test_api_consistency.py  test_api_surface.py  test_arbitration.py  test_attn_impl_guard.py  test_auto_fix.py  test_backend_wrappers.py  test_batch_review.py  test_benchmark.py  test_benchmark_cli.py  test_benchmark_datasets.py  test_bidi_guard.py  test_binary_changes.py  test_cache_and_telemetry.py  test_calibration.py  test_calibration_replay.py  test_change_map.py  test_change_stats.py  test_checks.py  test_ci_signals.py  test_citation_verify.py  test_claude_cli.py  test_cli.py  test_cli_commands.py  test_cli_io.py  test_cli_parser.py  test_cli_review.py  test_cli_review_emit.py  test_cli_review_helpers.py  test_cli_review_issues.py  test_cli_triage.py  test_codequality.py  test_codex_cli.py  test_cohere.py  test_commit_review.py  (+148 more)
(+4247 files in other folders)
