[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prthinker"
version = "0.1.0"
description = "Chain-of-Thought code review pipeline with pluggable inference backends (local HF / OpenAI-compat / Anthropic / project FastAPI server) and GitHub PR integration"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "JeffreyChen" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
    "PyYAML>=6",
]

[project.optional-dependencies]
runner = []
dev = [
    "pytest>=8",
]
# transformers is capped below 5.0 on purpose. transformers 5.x
# rewrote the MoE forward in a way that, for Qwen3-*-A3B, materialises a
# dense fp32 [seq, hidden, intermediate] tensor instead of routing the
# top-k experts sparsely. That allocation is *linear* in input length
# (~48 MiB/token = hidden_size*intermediate_size*4) and OOMs a 44 GiB
# L40S at a few thousand prompt tokens — the "Tried to allocate 269 GiB"
# failure. It also stopped applying bitsandbytes 4-bit (the model loaded
# in bf16, ~59 GiB). A `--no-cache` rebuild pulled 5.9.0 because these
# were unpinned; 4.x (resolves to 4.57.x) keeps sparse MoE + 4-bit.
local = [
    "transformers",
    "torch",
    "accelerate",
    "bitsandbytes",
    "peft==0.18.0",
    "faiss-cpu",
    "numpy",
]
server = [
    "prthinker[local]",
    "fastapi",
    "uvicorn",
    "pydantic>=2",
    "prometheus-fastapi-instrumentator>=7",
]
# NOTE: flash-attn is installed separately in docker/Dockerfile.server
# because its setup.py imports torch at build-isolation time, which
# pip cannot satisfy before the rest of [server] is installed. See
# the Dockerfile for the --no-build-isolation step.
mcp = [
    "mcp>=1.0",
]

[project.scripts]
prthinker = "prthinker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prthinker*"]
exclude = ["codes*", "datas*", "paper*", "gen-paper*"]

[tool.bandit]
# Project-wide skips for systemic false positives. Each entry below MUST
# be paired with a justification per the suppression-conventions rule in
# READMEs/CLAUDE.md. Add a per-line `# nosec B<NNN>` for one-off
# exceptions instead of extending this list.
skips = [
    # B101 — `assert` used. Only used for type-narrowing in factory
    # branches AFTER Config.__post_init__ has already validated the
    # matching sub-config is non-None. These asserts inform mypy/pyright
    # and are stripped under `python -O` without changing safety.
    "B101",
    # B404 — `import subprocess`. Used to shell out to `git` / `gh` with
    # arg lists (never shell=True, never with untrusted input).
    "B404",
    # B603 — subprocess call without shell=True. That is the *safe*
    # pattern; bandit flags any subprocess call for review.
    "B603",
    # B607 — partial executable path (`git`, `gh`). Intentional reliance
    # on $PATH so the user's installed git is used; pinning to an
    # absolute path would break cross-platform installs.
    "B607",
]

[tool.pydocstyle]
# The project follows the D212 convention: the summary of a multi-line
# docstring lives on the FIRST line, not the second. D213 says the
# opposite and is mutually exclusive with D212; ignore it so the two
# styles don't collide. Other defaults from the `pep257` convention
# stay enabled.
convention = "pep257"
add-ignore = ["D213"]
add-select = ["D212"]
match-dir = "^(?!codes|paper|gen-paper|docs|datas).*"
