[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prthinker"
version = "0.1.0"
description = "Chain-of-Thought code review pipeline with pluggable inference backends (local HF / OpenAI-compat / Anthropic / project FastAPI server) and GitHub PR integration"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "JeffreyChen" }]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.11",
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
runner = []
dev = [
    "pytest>=8.4",
]
# The heavy ML stack is intentionally UNPINNED — the supported deploy
# loads the 30B-A3B model in bf16 (see CLAUDE.md "GPU Server: bf16, no
# flash-attn, no dependency pins" and codes/util/qwen3_util.load_qwen3_model).
# bf16 + SDPA does NOT trigger the transformers>=5 MoE densification path,
# so transformers 5.x is fine. The danger is the *4-bit + transformers>=5*
# combination: 4-bit re-engaging on 5.x densifies the A3B MoE forward (an
# allocation linear in input length) and OOMs the L40S — the recurring
# "Tried to allocate NN GiB" failure. load_qwen3_model never requests 4-bit
# for the A3B models, and _verify_quant_safe() refuses to boot if 4-bit
# somehow engaged on transformers>=5. Do not re-pin transformers<5 or add
# flash-attn; either nudges bitsandbytes 4-bit back into effect.
local = [
    "transformers",
    "torch",
    "accelerate",
    "bitsandbytes",
    "peft==0.19.1",
    "faiss-cpu",
    "numpy",
]
server = [
    "prthinker[local]",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.11",
    "prometheus-fastapi-instrumentator>=7.1",
]
# NOTE: flash-attn is installed separately in docker/Dockerfile.server
# because its setup.py imports torch at build-isolation time, which
# pip cannot satisfy before the rest of [server] is installed. See
# the Dockerfile for the --no-build-isolation step.
mcp = [
    "mcp>=1.9",
]

[project.scripts]
prthinker = "prthinker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prthinker*"]
exclude = ["codes*", "datas*", "paper*", "gen-paper*"]

[tool.bandit]
# Project-wide skips for systemic false positives. Each entry below MUST
# be paired with a justification per the suppression-conventions rule in
# READMEs/CLAUDE.md. Add a per-line `# nosec B<NNN>` for one-off
# exceptions instead of extending this list.
skips = [
    # B101 — `assert` used. Only used for type-narrowing in factory
    # branches AFTER Config.__post_init__ has already validated the
    # matching sub-config is non-None. These asserts inform mypy/pyright
    # and are stripped under `python -O` without changing safety.
    "B101",
    # B404 — `import subprocess`. Used to shell out to `git` / `gh` with
    # arg lists (never shell=True, never with untrusted input).
    "B404",
    # B603 — subprocess call without shell=True. That is the *safe*
    # pattern; bandit flags any subprocess call for review.
    "B603",
    # B607 — partial executable path (`git`, `gh`). Intentional reliance
    # on $PATH so the user's installed git is used; pinning to an
    # absolute path would break cross-platform installs.
    "B607",
]

[tool.pydocstyle]
# The project follows the D212 convention: the summary of a multi-line
# docstring lives on the FIRST line, not the second. D213 says the
# opposite and is mutually exclusive with D212; ignore it so the two
# styles don't collide. Other defaults from the `pep257` convention
# stay enabled.
convention = "pep257"
add-ignore = ["D213"]
add-select = ["D212"]
match-dir = "^(?!codes|paper|gen-paper|docs|datas).*"
