[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prthinker"
version = "0.1.0"
description = "Chain-of-Thought code review pipeline with pluggable inference backends (local HF / OpenAI-compat / Anthropic / project FastAPI server) and GitHub PR integration"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "JeffreyChen" }]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.11",
    "PyYAML>=6.0.2",
]

[project.optional-dependencies]
runner = []
dev = [
    "pytest>=8.4",
]
# transformers is pinned <5 on purpose. transformers>=5 densifies the
# Qwen3-A3B MoE forward to a [seq, hidden, intermediate] tensor (~48 MiB
# per input token, linear in length) and OOMs the L40S on a multi-thousand
# -token review — observed on 5.10.2 in bf16: a 2357-token file tried to
# allocate 110 GiB. This is NOT specific to 4-bit (an earlier, separate
# OOM): bf16 + SDPA densifies on >=5 just the same. The 4.x MoE forward
# routes sparsely and does not densify; 4.51+ has the Qwen3-MoE
# architecture the model needs. load_qwen3_model loads bf16 and never
# requests 4-bit, so the <5 pin does NOT re-engage bitsandbytes 4-bit.
# Validate any change with the qwen3_util boot probe (do NOT set
# PRTHINKER_SKIP_BOOT_PROBE). See CLAUDE.md "GPU Server: bf16".
local = [
    "transformers>=4.51,<6",
    "torch",
    "accelerate",
    "bitsandbytes",
    "peft==0.19.1",
    "faiss-cpu",
    "numpy",
    # EmbeddingGemma (the default local RAG embedding) needs the ST stack:
    # its Dense projections + query/document prompts are not reproducible
    # with bare AutoModel pooling. Works with transformers 4.x and 5.x.
    "sentence-transformers>=3.0",
]
server = [
    "prthinker[local]",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.11",
    "prometheus-fastapi-instrumentator>=7.1",
]
# NOTE: flash-attn is intentionally NOT a dependency and is NOT installed
# in docker/Dockerfile.server. On the supported deploy the 30B-A3B model
# runs bf16 + SDPA; installing flash-attn (or re-pinning transformers<5)
# nudges bitsandbytes 4-bit back into effect, which densifies the A3B MoE
# forward (an allocation linear in input length) and OOMs the L40S. See
# CLAUDE.md "GPU Server: bf16, no flash-attn, no dependency pins". Do not
# add a flash-attn install step.
mcp = [
    "mcp>=1.9",
]

[project.scripts]
prthinker = "prthinker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prthinker*"]
exclude = ["codes*", "datas*", "paper*", "gen-paper*"]

[tool.bandit]
# Project-wide skips for systemic false positives. Each entry below MUST
# be paired with a justification per the suppression-conventions rule in
# READMEs/CLAUDE.md. Add a per-line `# nosec B<NNN>` for one-off
# exceptions instead of extending this list.
skips = [
    # B101 — `assert` used. Only used for type-narrowing in factory
    # branches AFTER Config.__post_init__ has already validated the
    # matching sub-config is non-None. These asserts inform mypy/pyright
    # and are stripped under `python -O` without changing safety.
    "B101",
    # B404 — `import subprocess`. Used to shell out to `git` / `gh` with
    # arg lists (never shell=True, never with untrusted input).
    "B404",
    # B603 — subprocess call without shell=True. That is the *safe*
    # pattern; bandit flags any subprocess call for review.
    "B603",
    # B607 — partial executable path (`git`, `gh`). Intentional reliance
    # on $PATH so the user's installed git is used; pinning to an
    # absolute path would break cross-platform installs.
    "B607",
]

[tool.pydocstyle]
# The project follows the D212 convention: the summary of a multi-line
# docstring lives on the FIRST line, not the second. D213 says the
# opposite and is mutually exclusive with D212; ignore it so the two
# styles don't collide. Other defaults from the `pep257` convention
# stay enabled.
convention = "pep257"
add-ignore = ["D213"]
add-select = ["D212"]
match-dir = "^(?!codes|paper|gen-paper|docs|datas).*"
